# schematic-from-netlist

./: README.md  pyproject.toml  requirements.txt  setup.cfg
data/config/: hyper.ini
data/dot/: partition_2.dot
data/json/: partition_2.json
data/ltspice/: AND.asy  BUF.asy  DUT.asy  NOT.asy  TOP.asc  out.asc  test.asy
data/verilog/: buffering_test.v  olimex.v  primitive.v
docs/api/: ltspice_format.txt
resources/: elk_options.json
scripts/: lef_from_sym.py
src/schematic_from_netlist/: __main__.py  cli.py
src/schematic_from_netlist/astar_router/: ar_cost.py  ar_cost_estimator.py  ar_debug.py  ar_occupancy.py  astar_router.py
src/schematic_from_netlist/database/: netlist_database.py  netlist_operations.py  netlist_structures.py  physical_structures.py
src/schematic_from_netlist/detailed_router/: detailed_router.py  pcst_debug.py  pcst_router.py
src/schematic_from_netlist/global_placer/: global_placer.py
src/schematic_from_netlist/global_router/: global_router.py  gr_candidate_paths.py  gr_cost_calculator.py  gr_debug.py  gr_helpers.py  gr_layout_optimizer.py  gr_structures.py
src/schematic_from_netlist/graph/: cost_calculator.py  create_schematic.py  gen_sch_data.py  geom_utils.py  global_router.py  graph_partition.py  group_maker.py  grouper.py  layout_optimizer.py  pathfinder.py  router.py  router_debug.py  routing_helpers.py  routing_utils.py
src/schematic_from_netlist/interfaces/: elk.py  elk_utils.py  graphviz.py  json_graph.py  ltspice_writer.py  netlist_database.py  netlist_operations.py  netlist_structures.py  symbol_library.py  (+3 more)
(+8 files in other folders)
